# streamlit-chatbot

./: .gitignore  202501_memo.txt  Dockerfile  Pipfile  README.md  baku_demo.py  chat_history.json  gemma_demo.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: elekashi_numbers.csv
modules/: generate_response_from_chain.py  generate_response_from_gemini.py  generate_response_from_gemini_api.py  generate_response_from_gemini_mcp.py  generate_response_from_gemini_rag.py  generate_response_from_gemma2_baku.py  number_links.py  st_utiles.py  st_utils.py  styles.py  widgets.py
pages/: chat.py  signup.py
rag/: create_database.py  urls.csv
user/: auth.yaml
